# kindly

./: .gitignore  docker-compose.yaml
backend/: .default.env  .env.example  Dockerfile  pyproject.toml
backend/app/: db.py  dependencies.py  main.py  pagination.py
backend/app/interfaces/: __init__.py  ai_service.py  application_service.py  auth_service.py  common_service.py  exceptions.py  request_service.py
backend/app/internal/: auth.py  pagination.py
backend/app/models/: __init__.py  application.py  help_request.py  refresh_token.py  request.py  request_type.py  type_of.py  user.py
backend/app/routers/: auth.py  common.py  help_seeker.py  volunteer.py
backend/app/services/: __init__.py  ai_service.py  application_service.py  auth_service.py  common_service.py  request_service.py
backend/scripts/: insert_data.py
backend/sql/: create.sql
docs/: api.md
frontend/: .dockerignore  .env.example  Dockerfile  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/contexts/: AuthContext.tsx  auth-context.ts
frontend/src/hooks/: useConfirmDialog.ts  useScrollPosition.ts
frontend/src/layouts/: AppLayout.tsx
frontend/src/pages/: CreateRequestPage.tsx  EditProfilePage.tsx  LoginPage.tsx  ProfilePage.tsx  RegisterPage.tsx  RequestDetailsPage.tsx  RequestEditPage.tsx  RequestsPage.tsx
frontend/src/services/: api.ts  auth.service.ts  request.service.ts  user.service.ts
frontend/src/theme/: backgrounds.ts  index.ts
frontend/src/types/: api.types.ts  index.ts  (+3 more)
(+34 files in other folders)
