[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.118.3",
    "pwdlib[argon2]>=0.2.1",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.44",
    "alembic>=1.13.0",
    "aiosqlite>=0.21.0",
    "greenlet>=3.2.4",
]
